crates/engine/tests/compile_fail/safety_interlock_private_fields.stderr
warning: unreachable expression
  --> tests/compile_fail/safety_interlock_private_fields.rs:13:26
   |
12 |         watchdog: todo!(),
   |                   ------- any code following this expression is unreachable
13 |         timeout_handler: todo!(),
   |                          ^^^^^^^ unreachable expression
   |
   = note: `#[warn(unreachable_code)]` (part of `#[warn(unused)]`) on by default

error[E0451]: fields `watchdog`, `timeout_handler`, `safety_state`, `torque_limit`, `fault_log`, `max_fault_log_entries`, `fault_log_next_index`, `communication_timeout` and `last_communication` of struct `SafetyInterlockSystem` are private
  --> tests/compile_fail/safety_interlock_private_fields.rs:12:9
   |
10 |     let _system = SafetyInterlockSystem {
   |                   --------------------- in this type
11 |         //~^ ERROR
12 |         watchdog: todo!(),
   |         ^^^^^^^^ private field
13 |         timeout_handler: todo!(),
   |         ^^^^^^^^^^^^^^^ private field
14 |         safety_state: SafetyInterlockState::Normal,
   |         ^^^^^^^^^^^^ private field
15 |         torque_limit: todo!(),
   |         ^^^^^^^^^^^^ private field
16 |         fault_log: vec![],
   |         ^^^^^^^^^ private field
17 |         max_fault_log_entries: 100,
   |         ^^^^^^^^^^^^^^^^^^^^^ private field
18 |         fault_log_next_index: 0,
   |         ^^^^^^^^^^^^^^^^^^^^ private field
19 |         communication_timeout: std::time::Duration::from_millis(50),
   |         ^^^^^^^^^^^^^^^^^^^^^ private field
20 |         last_communication: None,
   |         ^^^^^^^^^^^^^^^^^^ private field
